swagger documentation updated
