# docs/swagger.json
@@ -19,9 +19,12 @@
                 "summary": "Get all tickets",
                 "responses": {
                     "200": {
-                        "description": "Get all tickets",
+                        "description": "Ok",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Ticket"
+                            }
                         }
                     }
                 }
@@ -38,6 +41,17 @@
                     "tickets"
                 ],
                 "summary": "Create a new ticket",
+                "parameters": [
+                    {
+                        "description": "Ticket object",
+                        "name": "ticket",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Ticket"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Ticket created",
@@ -60,9 +74,9 @@
                 "summary": "Server Health Check",
                 "responses": {
                     "200": {
-                        "description": "GET request accepted",
+                        "description": "Ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.HealthResponse"
                         }
                     },
                     "500": {
@@ -71,6 +85,45 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Ticket": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "priority": {
+                    "type": "integer"
+                },
+                "progress": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         }
